# django-on-vercel

./: .env.example  .gitignore  README.md  app.py  build.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  vercel.json
backend/: __init__.py  constants.py  db.py  env.py  settings.py  urls.py
