[project]
name = "django-on-vercel"
version = "0.1.0"
description = "A django app on vercel using postgres db"
authors = ["Arvind <pingarvindforquestions@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=3.2,<3.3",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "gunicorn>=23.0.0",
]
